syntax = "proto3";

package passwordcracker;

service PasswordCracker {
  rpc CrackPassword (stream CrackRequest) returns (stream CrackResponse);
}

message CrackRequest {
  int32 workerIndex = 1;
  int32 workersCount = 2;
  string password = 3;
  string workerAddress = 4;
}

message CrackResponse {
  bool success = 1;
  string foundPassword = 2;
  string workerAddress = 3;
}
